WIP: Add Error Prone profile
This patch integrates ErrorProne into build, activated by a new 'ep'
profile.

This profile is sensitive to a few user properties users can tweak:
- odl.ep.fork, which is an opt-in for not forking javac
- odl.ep.var, which is an explict opt-in into the Var checker
- odl.ep.extra, which can contain any extra arguments to pass to Error
  Prone

// FIXME: more config from infrautils
// FIXME: add bnd-parent policy to exclude errorprone_annotation imports?
// FIXME: add dependency plugin policy to not warn on unused
          errorprone_annotation ?

JIRA: ODLPARENT-336
Change-Id: Ie8f4b80d2f77dc7b073e194c2e417b60517ad1ba
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>